fixed so that the button disables when guess is too high

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ button:active {
 
 button:disabled {
     background-color: grey;
+    opacity: 1;
 }
 
 .centered-box {
